--- a/RoomWordSample/app/build.gradle
+++ b/RoomWordSample/app/build.gradle
@@ -25,23 +25,29 @@ android {
 }
 
 dependencies {
-    def roomVersion = "2.1.0-alpha02"
     def archLifecycleVersion = "2.0.0"
+    def roomVersion = "2.1.0-alpha02"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "androidx.core:core-ktx:1.0.0"
+    implementation "androidx.core:core-ktx:1.0.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
+    implementation "androidx.constraintlayout:constraintlayout:$archLifecycleVersion-alpha2"
     implementation "com.google.android.material:material:1.1.0-alpha01"
     testImplementation "junit:junit:4.12"
     androidTestImplementation "androidx.test:runner:1.1.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation "androidx.constraintlayout:constraintlayout:$archLifecycleVersion-alpha2"
 
     // Room components
     implementation "androidx.room:room-runtime:$roomVersion"
-    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
+
+    kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
 
     // Lifecycle
     components
